@@ -1,6 +1,8 @@
 ver 0.16.7 (2011/??/??)
 * input:
   - ffmpeg: support libavformat 0.7
+* decoder:
+  - ffmpeg: support libavformat 0.7
 * output:
   - httpd: fix excessive buffering
   - openal: force 16 bit playback, as 8 bit doesn't work
